<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Layout Margin-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <!--Company Name-->
            <TextView
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/companyName"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textColor="@color/darkGreen">

            </TextView>

            <!--Reservation Header-->
            <TextView
                android:id="@+id/reservationHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reserve_header"
                android:textColor="@color/forestGreen">

            </TextView>

            <!--Divider-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/limeGreen"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <!--Make Reservation Header-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/makeReservationHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/makeReservation"
                    android:textStyle="bold"
                    android:textColor="@color/forestGreen">

                </TextView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="15"
                    android:layout_gravity="center_vertical"
                    android:background="@color/limeGreen"/>

            </LinearLayout>

            <!--Date Picker-->
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />

            <!--Time Picker-->
            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <!--Input Details Header-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detailsHead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/details"
                    android:textStyle="bold"
                    android:textColor="@color/forestGreen">

                </TextView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="16"
                    android:layout_gravity="center_vertical"
                    android:background="@color/limeGreen"/>

            </LinearLayout>

            <!--Input Details Section-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="15dp">

                <!-- Name Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name_label"
                        android:textColor="@color/forestGreen">

                    </TextView>

                    <EditText
                        android:id="@+id/nameEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:backgroundTint="@color/limeGreen">

                    </EditText>

                </LinearLayout>

                <!-- Phone Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="1dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:id="@+id/phoneName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_label"
                        android:textColor="@color/forestGreen">

                    </TextView>

                    <EditText
                        android:id="@+id/phoneEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="phone"
                        android:backgroundTint="@color/limeGreen">

                    </EditText>

                </LinearLayout>

                <!-- Num Of Pax Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="1dp"
                        android:layout_height="10dp"/>

                    <TextView
                        android:id="@+id/paxName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/paxName"
                        android:textColor="@color/forestGreen">

                    </TextView>

                    <EditText
                        android:id="@+id/paxEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="number"
                        android:backgroundTint="@color/limeGreen">

                    </EditText>

                </LinearLayout>

                <!--Check Box: Smoking Area-->
                <CheckBox
                    android:id="@+id/checkSmoking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking_check"
                    android:textColor="@color/forestGreen">

                </CheckBox>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/limeGreen"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <!-- Buttons Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirmButton"
                    android:backgroundTint="@color/med_sea_green">

                </Button>

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:text="@string/resetButton"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/med_sea_green">

                </Button>

            </LinearLayout>

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red">

            </TextView>

            <Space
                android:layout_width="1dp"
                android:layout_height="100dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
